# Capstone-Stocker

./: .gitignore  pyproject.toml
Stocker/: settings.py  urls.py
Stocker/templates/: base.html  buy.html  company_less.html  company_more.html  fundamental_analysis.html  index.html  login.html  main.html  main_template.html  signup.html
authorization/: forms.py  urls.py  views.py
customuser/: admin.py  forms.py  models.py  urls.py  views.py
customuser/migrations/: 0001_initial.py
customuser/templates/: buy.html  company_less.html  company_more.html
landingpage/: models.py  views.py
portfolio/: models.py  serializers.py  urls.py  views.py
portfolio/migrations/: 0001_initial.py
